kfreebsd-7 (6.99+20060506-0.2) UNRELEASED; urgency=low

  * Remove kldutils from the dependencies alternatives.
  * Remove kfreebsd-common from the dependencies not that module-init-tools
    does the job, and bump the dependency on module-init-tools to (>= 6.1-6).

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 12 Dec 2006 15:44:22 +0100

kfreebsd-7 (6.99+20060506-0.1) unreleased; urgency=low

  * Fork for 7-CURRENT, based on r1560.

 -- Robert Millan <rmh@aybabtu.com>  Sat,  6 May 2006 09:04:52 +0200

kfreebsd-6 (6.0-0.4) unreleased; urgency=low

  * Re-enable atapi{fd,st}, ppc and psm, since they aren't being built
    as modules (Oh my god! My mouse, printer and/or ultra-weird storage device
    stopped working!).
  * Fix broken perms (644) in module dir.

 -- Robert Millan <rmh@aybabtu.com>  Fri, 28 Apr 2006 15:47:45 +0200

kfreebsd-6 (6.0-0.3) unreleased; urgency=low

  * Finaly, multiple kernels can coexist on your system!
    - Disable /boot/loader.conf (provided in kfreebsd-loader now).
    - Get rid of /boot/device.hints (now embedded in kernel image).
    - Move modules to /lib/modules/@RELEASE@.
    - Move kernel image to /boot/kfreebsd-@RELEASE@.
  * patches/999_config.diff: Refurbish.  Now builds linprocfs/linux into
    the kernel (since it's always used), and removes a bunch of non-
    essential stuff (use kfreebsd-common to load them as modules).
    Network and storage drivers _are_ still present (untill we port
    hotplug/discover).  On -486, this saves 544 KB in kernel.gz.

 -- Robert Millan <rmh@aybabtu.com>  Thu, 27 Apr 2006 18:56:22 +0200

kfreebsd-6 (6.0-0.2) unreleased; urgency=low

  * First "normal" upload to unreleased.

 -- Robert Millan <rmh@aybabtu.com>  Wed, 26 Apr 2006 14:55:28 +0200

kfreebsd-6 (6.0-0.1) unreleased; urgency=low

  [ Robert Edmonds ]
  * New upstream version pulled from RELENG_6 CVSup.
    - ReiserFS support.  (Closes: #335019)
  * Disabled the non-compiling hwpmc driver.

  [ Robert Millan ]