@@ -1,8 +1,9 @@
 kfreebsd-7 (6.99+20060506-0.2) UNRELEASED; urgency=low
 
   * Remove kldutils from the dependencies alternatives.
-  * Remove kfreebsd-common from the dependencies not that module-init-tools
+  * Remove kfreebsd-common from the dependencies now that module-init-tools
     does the job, and bump the dependency on module-init-tools to (>= 6.1-6).
+  * Create a /boot/kernel/ directory.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 12 Dec 2006 15:44:22 +0100
 
